@@ -2,12 +2,14 @@
 
 	* DISCLAIMER: Add words about "free to use".
 	* README: Modify "Win32 runtime" to "Microsoft C Runtime".
-	* Makefile.in (SRCDIST_FILES): Add DISCLAIMER and README.
+	* Makefile.in (SRCDIST_FILES): Add DISCLAIMER and CONTRIBUTORS.
 	(inst_docdir): New variable.
 	(INSTDOCS): Ditto.
 	(FLAGS_TO_PASS): Include inst_docdir.
 	(install-dirs): Add inst_docdir.
 	(install): Add loop for INSTDOCS.
+	* strncasecmp.c: Reword copyright and disclaimer.  Move Contributors
+	section to CONTRIBUTORS file.  Remove RCS tags.
 	
 2004-04-22  Danny Smith  <dannysmith@users.sourceforge.net>
 
@@ -23,7 +25,7 @@
 	* CONTRIBUTORS: New file.
 	* DISCLAIMER: Ditto.
 	* CRT_noglob.c: Reword copyright and disclaimer.  Move Contributors
-	section CONTRIBUTORS file.  Remove RCS tags.
+	section to CONTRIBUTORS file.  Remove RCS tags.
 	* CRTFmode.c: Ditto.
 	* CRTglob.c: Ditto.
 	* CRTinit.c: Ditto.
